tests/invalid/two_main.rk
class foo {
    @main
    static def main() { }

    @main
    static def main2() { }
}